--- a/spotifyclone/style.css
+++ b/spotifyclone/style.css
@@ -1,57 +1,116 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-body{
-    background-color: black;
-    color: white;
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+body {
+  background-color: black;
+  color: white;
 }
-*{ font-family: roboto;
-    margin: 0;
-    padding: 0;
-}
-
-
-.left{
-    width:25vw;
-    padding:10px
-
-}
-.right{width: 75vw;}
-
-
-.home ul li{ 
-    display:flex;
-    width:14px;
-    gap: 15px;
-    list-style: none;
-padding: 10px;
-font-weight: bold;
-}
-.home{
-    /* padding:10px; */
-}
-.library{
-    min-height: 80vh;
-    position: relative;
+* {
+  font-family: roboto;
+  margin: 0;
+  padding: 0;
 }
 
+.left {
+  width: 25vw;
+  padding: 10px;
+}
+.right {
+  width: 75vw;
+}
+
+.home ul li {
+  display: flex;
+  width: 14px;
+  gap: 15px;
+  list-style: none;
+  padding: 10px;
+  font-weight: bold;
+}
+.home {
+  margin: 5px 0;
+}
+.library {
+  min-height: 80vh;
+  position: relative;
+}
 
 .heading {
-    display: flex;
-    gap:15px;
-    width:100%;
-    padding-top:14px;
-    padding:23px 14px;
-    align-items: center;
-    font-size: 13px;
+  display: flex;
+  gap: 15px;
+  width: 100%;
+  padding-top: 14px;
+  padding: 23px 14px;
+  align-items: center;
+  font-size: 13px;
 }
-.heading img{ width :30px;}
+.heading img {
+  width: 30px;
+}
 
-.footer{
-    display:flex;
-    font-size: 10px;
-    color: gray;
-    gap:13px;
-position: absolute;
-bottom:0;}
-.footer a{color: gray;}
+.footer {
+  display: flex;
+  font-size: 10px;
+  color: gray;
+  gap: 13px;
+  position: absolute;
+  bottom: 0;
+  padding:20px 0;
+}
+
+.footer a {
+  color: gray;
+}
+
+.right {
+  margin: 16px 0px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 5px 0px 0px;
+  background-color: rgb(34, 34, 34);
+}
+
+.header > * {
+  padding: 15px;
+}
+.spotifyPlaylist {
+  padding: 6px;
+}
+.cardcontainer{
+    display: flex;
+    gap: 10px;
+flex-wrap: wrap;
+margin:30px;
+}
+
+.card {
+  width: 200px;
+
+  padding:10px;
+  border-radius: 5px;
+  background-color: #252525;
+  position: relative;
+}
+.card *{
+    padding-top:10px;
+    
+}
+.card img {
+  width: 100%;
+  object-fit:contain;      
+}
+
+.play{
+    position:absolute;
+    top:150px;
+    left:150px;
+    opacity: 0;
+    transition: transform 0.3s ease-in-out,opacity 0.5s ease-in-out;
+    
+}
+.play:hover {
+    fill: #4CAF50;
+    opacity: 1;
+    transform: translateY(-10px);
+  }
