--- a/spotifyclone/utility.css
+++ b/spotifyclone/utility.css
@@ -35,3 +35,22 @@ color: white;
 .p-1{
     padding:10px;
 }
+::-webkit-scrollbar {
+    width: 15npx;
+    height: 10px;
+    background-color: #333;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #333;
+    border-radius: 5px;
+  }
