--- a/spotifyclone/utility.css
+++ b/spotifyclone/utility.css
@@ -36,7 +36,7 @@ color: white;
     padding:10px;
 }
 ::-webkit-scrollbar {
-    width: 15npx;
+    width: 15ncpx;
     height: 10px;
     background-color: #333;
   }
